--- a/bitnytt/templates/fullwidth.html
+++ b/bitnytt/templates/fullwidth.html
@@ -4,5 +4,8 @@
 {% block title %}{% page_attribute "page_title" %}{% endblock title %}
 
 {% block content %}
+
+	{% placeholder "feature" %}
 	{% placeholder "content" %}
+	{% placeholder "splashbox" %}
 {% endblock content %}
