--- a/bitnytt/templates/base.html
+++ b/bitnytt/templates/base.html
@@ -5,17 +5,27 @@
         <title>{% block title %}This is my new project home page{% endblock title %}</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <style type="text/css">
+            .margin {
+                padding: 0;
+                margin: 0;
+            }
+
             .nav {
-                padding-left: 0;
+                padding-left: 20px;
             }
             .nav li {
                 display: inline;
                 list-style-type: none;
                 padding-right: 20px;
+                text-align: center;
             }
             .container {
-                width: 940px;
-                margin: 0 auto
+                width: 100%;
+                height: 100%;
+                background-color: #000;
+                margin: 0;
+                padding: 0;
+
             }
             .content {
                 float: left;
@@ -28,14 +38,15 @@
         </style>
         {% render_block "css" %}
     </head>
-    <body>
+    <p>hei</p>
         {% cms_toolbar %}
-        <div class="container">
+        <header class="container">
             <ul class="nav">
                 {% show_menu 0 100 100 100 %}
             </ul>
+        </header>
+        <body class="margin">
             {% block content %}{% endblock content %}
-        </div>
         {% render_block "js" %}
     </body>
     <footer>
